--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -6,10 +6,13 @@
       "fitWidth": false
     }
   },
-  "__version__": "1.0.4",
+  "__version__": "1.0.6",
   "fbx": {
     "legacyFbxImporter": {
       "visible": true
     }
+  },
+  "script": {
+    "preserveSymlinks": true
   }
 }
